# BlockChain-Copilot

./: .env.example  README.md  SKILLS_STRUCTURE.md  config.toml  curl_generator_test_retry.txt  curl_output.txt  main.py  pyproject.toml  test_transfer_chain.py  test_transfer_failure.py
skills/address-book/data/: contacts.json
tests/: test_address_book.py  test_address_profiling.py  test_address_security.py  test_agent_simulation.py  test_agent_with_contacts.py  test_all_skills.py  test_batch_simple.py  test_batch_transfer.py  test_nile_testnet.py  test_real_scenarios.py  test_results.json  test_results_summary.json  test_scam_detection.py  test_skill_generator.py  test_skills_summary.py  verify.py  verify_skills.py
