[project]
name = "blockchain-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.79.0",
    "fastapi>=0.128.4",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "tomli>=2.4.0",
    "tronpy>=0.6.2",
    "uvicorn[standard]>=0.40.0",
]
